<resources>
    <string name="app_name">My Application</string>
    <string name="remember_password">remember password</string>
    <string name="login">sign in</string>
    <string name="cancel">cancel</string>
    <string name="enter_name">enter name</string>
    <string name="enter_password">enter password</string>


    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>

    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_maps">Map</string>
</resources>
