<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context="b12.abdul.com.myapplication.MainActivity">

    <EditText
        android:id="@+id/editTextName"
        android:hint="@string/enter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
         />

    <EditText
        android:id="@+id/editText2"
        android:hint="@string/enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextName"
        android:layout_alignStart="@+id/editTextName"
        android:layout_below="@+id/editTextName"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="43dp"
        android:text="@string/remember_password" />

    <Button
        android:id="@+id/buttonLogin"
        android:onClick="clickHandler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkBox"
        android:layout_alignStart="@+id/checkBox"
        android:layout_below="@+id/checkBox"
        android:layout_marginTop="44dp"
        android:text="@string/login" />

    <Button
        android:textColor="#fff"
        android:onClick="clickHandler"

        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonLogin"
        android:layout_marginLeft="62dp"
        android:layout_marginStart="62dp"
        android:layout_toEndOf="@+id/checkBox"
        android:layout_toRightOf="@+id/checkBox"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/checkBox"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:text="TextView"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner"
        android:entries="@array/countries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/buttonLogin"
        android:layout_alignStart="@+id/buttonLogin"
        android:layout_below="@+id/buttonLogin"
        android:layout_marginTop="62dp" />

</RelativeLayout>
